Bug aligns wordpress core

--- a/assets/css/wordpress-core.less
+++ b/assets/css/wordpress-core.less
@@ -1,7 +1,6 @@
-/* =WordPress Core
--------------------------------------------------------------- */
+// main: main.less
+
 .alignnone {
-    margin: 5px 20px 20px 0;
 }
 
 .aligncenter,
@@ -12,26 +11,25 @@ div.aligncenter {
 
 .alignright {
     float:right;
-    margin: 5px 0 20px 20px;
+    margin: 0 0 0 20px;
 }
 
 .alignleft {
     float: left;
-    margin: 5px 20px 20px 0;
+    margin: 0 20px 0 0;
 }
 
 a img.alignright {
     float: right;
-    margin: 5px 0 20px 20px;
+    margin: 0 0 0 20px;
 }
 
 a img.alignnone {
-    margin: 5px 20px 20px 0;
 }
 
 a img.alignleft {
     float: left;
-    margin: 5px 20px 20px 0;
+    margin: 0 20px 0 0;
 }
 
 a img.aligncenter {
